# npnet

./: .gitignore  .pylintrc  LICENSE  README.md  requirements.txt  requirements_dev.txt  save_model.py  setup.cfg  simple_nn.py  tox.ini  train.py  train_classifier.py  train_cnn.py  train_regressor.py
NeuralNets/: __init__.py
NeuralNets/nn/: activations.py  initializers.py  layers.py  nets.py
neuralnets/: __init__.py  activations.py  layers.py  metrics.py  module.py  optimizers.py  variable.py
neuralnets/nn/: layers.py  losses.py  module.py  optimizers.py  saver.py
src/npnet/: __init__.py  activations.py  dataloader.py  initializers.py  layers.py  losses.py  module.py  optimizers.py  saver.py
tests/: save_model.py  train_classifier.py  train_cnn.py  train_regressor.py
