[metadata]
name = npnet
version = 0.0.9
author = MorvanZhou
author_email = mofanpy@hotmail.com
description = neural net powered by numpy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorvanZhou/npnet
project_urls =
    Bug Tracker = https://github.com/MorvanZhou/npnet/issues
    Source=https://github.com/MorvanZhou/npnet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy >=1.22.3; python_version >= "3.8"
    numpy >=1.19.5; python_version < "3.8"

[options.packages.find]
where = src

[flake8]
max-line-length = 160

[options.extras_require]
test =
    matplotlib>=3.3.4
build =
    tox==3.24.3
    tox-conda
    build
    twine
    pylint
